# sdk-nrf

./: CMakeLists.txt  Kconfig.nrf  README.rst  sdk_export.py  west.yml
cmake/: version.cmake
drivers/: CMakeLists.txt  Kconfig
drivers/cracen/: CMakeLists.txt  Kconfig  lib_kmu.c
drivers/serial/: Kconfig  Kconfig.nrf_sw_lpuart  uart_nrf_sw_lpuart.c
drivers/wifi/nrf700x/src/: fmac_main.c
include/: pm_config.h
include/cracen/: lib_kmu.h
include/modem/: at_monitor.h
lib/: CMakeLists.txt  Kconfig
lib/at_monitor/: at_monitor.c
lib/lte_link_control/: Kconfig
lib/lte_link_control/modules/: dns.c
lib/modem_antenna/: Kconfig
lib/nrf_modem_lib/: Kconfig  Kconfig.modemlib  fault.c  nrf91_sockets.c  nrf9x_sockets.c  nrf_modem_os.c  sanity.c
lib/nrf_modem_lib/lte_net_if/: Kconfig  lte_net_if.c
lib/nrf_modem_lib/trace_backends/rtt/: rtt.c
lib/pdn/: Kconfig
modules/: CMakeLists.txt  Kconfig  modules.cmake
modules/hostap/: CMakeLists.txt  Kconfig
modules/hostap/src/: supp_api.c
samples/bluetooth/direct_test_mode/: Kconfig  prj.conf  sample.yaml
samples/bluetooth/direct_test_mode/boards/: nrf52840dk_nrf52840.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay
samples/wifi/radio_test/single_domain/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
samples/wifi/radio_test/single_domain/src/: radio_cmd.c  radio_test.c
subsys/: CMakeLists.txt  Kconfig
subsys/bluetooth/: CMakeLists.txt  Kconfig
subsys/bluetooth/controller/: Kconfig  hci_driver.c  hci_internal_wrappers.c
subsys/bluetooth/host_extensions/: CMakeLists.txt
subsys/mpsl/clock_ctrl/: Kconfig  mpsl_clock_ctrl.c
subsys/mpsl/init/: mpsl_init.c
sysbuild/: Kconfig.sysbuild
zephyr/: module.yml
